added selfie ratio options

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "next": "canary",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.2.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0"
+  }
 }
